--- a/codergb-hub-client/src/assets/css/base.css
+++ b/codergb-hub-client/src/assets/css/base.css
@@ -41,3 +41,8 @@ input,textarea,button{
   padding: 0;
   margin: 0;
 }
+.profile-drop-style{
+  box-shadow: 0 0 15px rgba(0,0,0,.08);
+  border-radius: 4px;
+  overflow: hidden;
+}
