实现观看历史

--- a/codergb-hub-client/src/assets/css/base.css
+++ b/codergb-hub-client/src/assets/css/base.css
@@ -59,7 +59,9 @@ input,textarea,button{
 .ant-input{
   border-radius: 6px;
 }
-
+.ant-layout-content{
+  background-color: #fff;
+}
 .text-nowrap-mul-line{
   display: -webkit-box;
   -webkit-box-orient: vertical;
