--- a/codergb-hub-profile/src/assets/css/base.css
+++ b/codergb-hub-profile/src/assets/css/base.css
@@ -2,7 +2,8 @@ html{
   font-size:2.083333333333vw;
 }
 :root{
-  --primary-color:#ff0000
+  --primary-color:#ff0000;
+  --line-color:#dcdfe6
 }
 *{
   box-sizing: border-box;
