实现聊天初步功能

--- a/codergb-hub-client/src/assets/css/base.css
+++ b/codergb-hub-client/src/assets/css/base.css
@@ -10,6 +10,7 @@ html{
   box-sizing: border-box;
   font-size: 14px;
   font-family: "Roboto","Arial",sans-serif;
+  word-break: break-all;
 }
 ul,li{
   list-style: none;
