--- a/codergb-hub-uniapp/uni.scss
+++ b/codergb-hub-uniapp/uni.scss
@@ -74,3 +74,7 @@ $uni-color-subtitle: #555555; // 二级标题颜色
 $uni-font-size-subtitle:26px;
 $uni-color-paragraph: #3F536E; // 文章段落颜色
 $uni-font-size-paragraph:15px;
+
+.uni-collapse-item__title{
+	align-items: flex-start;
+}
