--- a/codergb-hub-client/src/assets/css/base.css
+++ b/codergb-hub-client/src/assets/css/base.css
@@ -152,3 +152,25 @@ button {
     margin: 0 0 0 5px;
   }
 }
+
+.g-page-enter {
+  opacity: 0;
+  transform: scale(1.05);
+}
+
+.g-page-enter-active {
+  opacity: 1;
+  transform: scale(1);
+  transition: opacity 300ms, transform 200ms;
+}
+
+.g-page-exit {
+  opacity: 1;
+  transform: scale(1);
+}
+
+.g-page-exit-active {
+  opacity: 0;
+  transform: scale(0.95);
+  transition: opacity 300ms, transform 200ms;
+}
